--- a/style.css
+++ b/style.css
@@ -51,11 +51,23 @@
   
   /* Todo Header */
   .todo-container {
-    max-width: 450px;
-    margin: 3rem auto 0;
+    /* max-width: 450px;
+    
     background-color: #fdfdfd;
     padding: 1.5rem;
-    border-radius: 15px;
+    border-radius: 15px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 420px;
+    padding: 1.5rem;
+    margin: 3rem auto 0;
+    max-width: 450px;
+    background: transparent;
+    border: 2px solid rgba(255,255,255,0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(7px);
   }
   
   .todo-container header {
@@ -65,6 +77,10 @@
   }
   
   /* Todo Form */
+  h1 {
+    color: #eeecec;
+  }
+
   #todo-form,
   #edit-form {
     padding: 1rem;
@@ -75,6 +91,7 @@
   #edit-form p {
     margin-bottom: 0.5rem;
     font-weight: bold;
+    color: #eeecec;
   }
   
   .form-control {
@@ -99,6 +116,7 @@
   
   #toolbar h4 {
     margin-bottom: 0.5rem;
+    color: #eeecec;
   }
   
   #search {
